restructure and add .gitignore

--- a/index.html
+++ b/index.html
@@ -129,36 +129,36 @@
             </div>
             <div class="col-md-6 small-box">
                 <div class="picture">
-                    <a href="img/room_small/39.jpg" data-lightbox="lightbox[mali]">
-                        <img alt="" src="img/room_small/39.jpg"></a>
+                    <a href="assets/img/room_small/39.jpg" data-lightbox="lightbox[mali]">
+                        <img alt="" src="assets/img/room_small/39.jpg"></a>
                 </div>
                 <div class="picture-hidden">
-                    <a href="img/room_small/40.jpg" data-lightbox="lightbox[mali]">
-                        <img alt="" src="img/room_small/40.jpg"></a>
+                    <a href="assets/img/room_small/40.jpg" data-lightbox="lightbox[mali]">
+                        <img alt="" src="assets/img/room_small/40.jpg"></a>
                 </div>
                 <div class="picture-hidden">
-                    <a href="img/room_small/41.jpg" data-lightbox="lightbox[mali]">
-                        <img alt="" src="img/room_small/41.jpg"></a>
+                    <a href="assets/img/room_small/41.jpg" data-lightbox="lightbox[mali]">
+                        <img alt="" src="assets/img/room_small/41.jpg"></a>
                 </div>
                 <div class="picture-hidden">
-                    <a href="img/room_small/42.jpg" data-lightbox="lightbox[mali]">
-                        <img alt="" src="img/room_small/42.jpg"></a>
+                    <a href="assets/img/room_small/42.jpg" data-lightbox="lightbox[mali]">
+                        <img alt="" src="assets/img/room_small/42.jpg"></a>
                 </div>
                 <div class="picture-hidden">
-                    <a href="img/room_small/43.jpg" data-lightbox="lightbox[mali]">
-                        <img alt="" src="img/room_small/43.jpg"></a>
+                    <a href="assets/img/room_small/43.jpg" data-lightbox="lightbox[mali]">
+                        <img alt="" src="assets/img/room_small/43.jpg"></a>
                 </div>
                 <div class="picture-hidden">
-                    <a href="img/room_small/44.jpg" data-lightbox="lightbox[mali]">
-                        <img alt="" src="img/room_small/44.jpg"></a>
+                    <a href="assets/img/room_small/44.jpg" data-lightbox="lightbox[mali]">
+                        <img alt="" src="assets/img/room_small/44.jpg"></a>
                 </div>
                 <div class="picture-hidden">
-                    <a href="img/room_small/53.jpg" data-lightbox="lightbox[mali]">
-                        <img alt="" src="img/room_small/53.jpg"></a>
+                    <a href="assets/img/room_small/53.jpg" data-lightbox="lightbox[mali]">
+                        <img alt="" src="assets/img/room_small/53.jpg"></a>
                 </div>
                 <div class="picture-hidden">
-                    <a href="img/room_small/54.jpg" data-lightbox="lightbox[mali]">
-                        <img alt="" src="img/room_small/54.jpg"></a>
+                    <a href="assets/img/room_small/54.jpg" data-lightbox="lightbox[mali]">
+                        <img alt="" src="assets/img/room_small/54.jpg"></a>
                 </div>
             </div>
         </div>
@@ -174,36 +174,36 @@
         <div class="row vertical-align">
             <div class="col-md-6 big-box">
                 <div class="picture">
-                    <a href="img/room_big/45.jpg" data-lightbox="lightbox[veliki]">
-                        <img alt="" src="img/room_big/45.jpg"></a>
+                    <a href="assets/img/room_big/45.jpg" data-lightbox="lightbox[veliki]">
+                        <img alt="" src="assets/img/room_big/45.jpg"></a>
                 </div>
                 <div class="picture-hidden">
-                    <a href="img/room_big/46.jpg" data-lightbox="lightbox[veliki]">
-                        <img alt="" src="img/room_big/46.jpg"></a>
+                    <a href="assets/img/room_big/46.jpg" data-lightbox="lightbox[veliki]">
+                        <img alt="" src="assets/img/room_big/46.jpg"></a>
                 </div>
                 <div class="picture-hidden">
-                    <a href="img/room_big/47.jpg" data-lightbox="lightbox[veliki]">
-                        <img alt="" src="img/room_big/47.jpg"></a>
+                    <a href="assets/img/room_big/47.jpg" data-lightbox="lightbox[veliki]">
+                        <img alt="" src="assets/img/room_big/47.jpg"></a>
                 </div>
                 <div class="picture-hidden">
-                    <a href="img/room_big/48.jpg" data-lightbox="lightbox[veliki]">
-                        <img alt="" src="img/room_big/48.jpg"></a>
+                    <a href="assets/img/room_big/48.jpg" data-lightbox="lightbox[veliki]">
+                        <img alt="" src="assets/img/room_big/48.jpg"></a>
                 </div>
                 <div class="picture-hidden">
-                    <a href="img/room_big/49.jpg" data-lightbox="lightbox[veliki]">
-                        <img alt="" src="img/room_big/49.jpg"></a>
+                    <a href="assets/img/room_big/49.jpg" data-lightbox="lightbox[veliki]">
+                        <img alt="" src="assets/img/room_big/49.jpg"></a>
                 </div>
                 <div class="picture-hidden">
-                    <a href="img/room_big/50.jpg" data-lightbox="lightbox[veliki]">
-                        <img alt="" src="img/room_big/50.jpg"></a>
+                    <a href="assets/img/room_big/50.jpg" data-lightbox="lightbox[veliki]">
+                        <img alt="" src="assets/img/room_big/50.jpg"></a>
                 </div>
                 <div class="picture-hidden">
-                    <a href="img/room_big/51.jpg" data-lightbox="lightbox[veliki]">
-                        <img alt="" src="img/room_big/51.jpg"></a>
+                    <a href="assets/img/room_big/51.jpg" data-lightbox="lightbox[veliki]">
+                        <img alt="" src="assets/img/room_big/51.jpg"></a>
                 </div>
                 <div class="picture-hidden">
-                    <a href="img/room_big/52.jpg" data-lightbox="lightbox[veliki]">
-                        <img alt="" src="img/room_big/52.jpg"></a>
+                    <a href="assets/img/room_big/52.jpg" data-lightbox="lightbox[veliki]">
+                        <img alt="" src="assets/img/room_big/52.jpg"></a>
                 </div>
             </div>
             <div class="col-md-6 big-box">
@@ -270,44 +270,44 @@
             </div>
             <div class="col-md-6 island-box">
                 <div class="picture">
-                    <a href="img/vir/12.jpg" data-lightbox="lightbox[vir]">
-                        <img alt="" src="img/vir/12.jpg"></a>
+                    <a href="assets/img/vir/12.jpg" data-lightbox="lightbox[vir]">
+                        <img alt="" src="assets/img/vir/12.jpg"></a>
                 </div>
                 <div class="picture-hidden">
-                    <a href="img/vir/10.jpg" data-lightbox="lightbox[vir]">
-                        <img alt="" src="img/vir/10.jpg"></a>
+                    <a href="assets/img/vir/10.jpg" data-lightbox="lightbox[vir]">
+                        <img alt="" src="assets/img/vir/10.jpg"></a>
                 </div>
                 <div class="picture-hidden">
-                    <a href="img/vir/11.jpg" data-lightbox="lightbox[vir]">
-                        <img alt="" src="img/vir/11.jpg"></a>
+                    <a href="assets/img/vir/11.jpg" data-lightbox="lightbox[vir]">
+                        <img alt="" src="assets/img/vir/11.jpg"></a>
                 </div>
                 <div class="picture-hidden">
-                    <a href="img/vir/13.jpg" data-lightbox="lightbox[vir]">
-                        <img alt="" src="img/vir/13.jpg"></a>
+                    <a href="assets/img/vir/13.jpg" data-lightbox="lightbox[vir]">
+                        <img alt="" src="assets/img/vir/13.jpg"></a>
                 </div>
                 <div class="picture-hidden">
-                    <a href="img/vir/14.jpg" data-lightbox="lightbox[vir]">
-                        <img alt="" src="img/vir/14.jpg"></a>
+                    <a href="assets/img/vir/14.jpg" data-lightbox="lightbox[vir]">
+                        <img alt="" src="assets/img/vir/14.jpg"></a>
                 </div>
                 <div class="picture-hidden">
-                    <a href="img/vir/15.jpg" data-lightbox="lightbox[vir]">
-                        <img alt="" src="img/vir/15.jpg"></a>
+                    <a href="assets/img/vir/15.jpg" data-lightbox="lightbox[vir]">
+                        <img alt="" src="assets/img/vir/15.jpg"></a>
                 </div>
                 <div class="picture-hidden">
-                    <a href="img/vir/16.jpg" data-lightbox="lightbox[vir]">
-                        <img alt="" src="img/vir/16.jpg"></a>
+                    <a href="assets/img/vir/16.jpg" data-lightbox="lightbox[vir]">
+                        <img alt="" src="assets/img/vir/16.jpg"></a>
                 </div>
                 <div class="picture-hidden">
-                    <a href="img/vir/17.jpg" data-lightbox="lightbox[vir]">
-                        <img alt="" src="img/vir/17.jpg"></a>
+                    <a href="assets/img/vir/17.jpg" data-lightbox="lightbox[vir]">
+                        <img alt="" src="assets/img/vir/17.jpg"></a>
                 </div>
                 <div class="picture-hidden">
-                    <a href="img/vir/18.jpg" data-lightbox="lightbox[vir]">
-                        <img alt="" src="img/vir/18.jpg"></a>
+                    <a href="assets/img/vir/18.jpg" data-lightbox="lightbox[vir]">
+                        <img alt="" src="assets/img/vir/18.jpg"></a>
                 </div>
                 <div class="picture-hidden">
-                    <a href="img/vir/19.jpg" data-lightbox="lightbox[vir]">
-                        <img alt="" src="img/vir/19.jpg"></a>
+                    <a href="assets/img/vir/19.jpg" data-lightbox="lightbox[vir]">
+                        <img alt="" src="assets/img/vir/19.jpg"></a>
                 </div>
             </div>
         </div>
@@ -371,11 +371,11 @@
                     </p>
                     <p data-i18n="follow_us">Pratite nas:<br></p>
                     <a target="_blank" href="https://www.facebook.com/applavosidro">
-                        <img src="img/social/facebook.png" alt="Facebook"/></a>
+                        <img src="assets/img/social/facebook.png" alt="Facebook"/></a>
                     <a href="https://twitter.com/intent/follow?screen_name=@plavosidro">
-                        <img src="img/social/twitter.png" alt="Twitter"/></a>
+                        <img src="assets/img/social/twitter.png" alt="Twitter"/></a>
                     <a target="_blank" href="https://www.instagram.com/plavosidro/?ref=badge">
-                        <img src="img/social/instagram.png" alt="Instagram"/></a>
+                        <img src="assets/img/social/instagram.png" alt="Instagram"/></a>
                 </div>
             </div>
         </div>
@@ -405,7 +405,7 @@
             <div class="col-md-4 instagram">
                 <h3 class="instagram_title">
                     <a target="_blank" href="https://www.instagram.com/plavosidro/?ref=badge"><img
-                            src="img/social/instagram.png" alt="Instagram"/>Instagram</a>
+                            src="assets/img/social/instagram.png" alt="Instagram"/>Instagram</a>
                 </h3>
                 <!--LightWidget WIDGET-->
                 <iframe src="//lightwidget.com/widgets/b632c3a11e565d3fb86659d8eeb542e6.html"
