--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
     <link href="css/template.css" rel="stylesheet">
     <link href="css/lightbox.css" rel="stylesheet">
     <link href="css/contactform.css" rel="stylesheet">
+    <link href="css/fontello.css" rel="stylesheet">
+    <link href="css/fontello-codes.css" rel="stylesheet">
+    <link href="css/fontello-embedded.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -59,7 +62,7 @@
                 <li class="page-scroll"><a data-i18n="gallery" href="#social">Galerija</a></li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle globus" data-toggle="dropdown" role="button" aria-haspopup="true"
-                       aria-expanded="false"><img alt="lang" src="assets/globus.png" id="globus"> <span class="caret"></span></a>
+                       aria-expanded="false"><i class="icon-globe"></i> <span class="caret"></span></a>
                     <ul class="dropdown-menu language">
                         <li><a href="javascript:;" class="switch-locale" data-locale="hr">Hrvatski</a></li>
                         <li><a href="javascript:;" class="switch-locale" data-locale="de">Deutsch</a></li>
@@ -369,13 +372,20 @@
                         <span data-i18n="find_us">Nadjite nas na </span>
                         <a target="_blank" href="http://www.booking.com/hotel/hr/apartmani-plavo-sidro-zarici.de.html?label=gen173nr-1BCAsoZUIcYXBhcnRtYW5pLXBsYXZvLXNpZHJvLXphcmljaUgzYgVub3JlZmgOiAEBmAEHwgEDYWJuyAEN2AEB6AEBqAIE;sid=f4d08e8511c26fb98901cbf201c776c6;dcid=1;dist=0&sb_price_type=total&type=total&">www.booking.com</a>
                     </p>
-                    <p data-i18n="follow_us">Pratite nas:<br></p>
-                    <a target="_blank" href="https://www.facebook.com/applavosidro">
-                        <img src="assets/img/social/facebook.png" alt="Facebook"/></a>
-                    <a href="https://twitter.com/intent/follow?screen_name=@plavosidro">
-                        <img src="assets/img/social/twitter.png" alt="Twitter"/></a>
-                    <a target="_blank" href="https://www.instagram.com/plavosidro/?ref=badge">
-                        <img src="assets/img/social/instagram.png" alt="Instagram"/></a>
+                    <p>
+                        <a target="_blank" href="https://www.facebook.com/applavosidro">
+                            <i class="icon-facebook"></i>
+                        </a>
+                        <a href="https://twitter.com/intent/follow?screen_name=@plavosidro">
+                            <i class="icon-twitter"></i>
+                        </a>
+                        <a target="_blank" href="https://www.instagram.com/plavosidro/?ref=badge">
+                            <i class="icon-instagram"></i>
+                        </a>
+                        <a target="_blank" href="https://github.com/PlavoSidro">
+                            <i class="icon-github-circled"></i>
+                        </a>
+                    </p>
                 </div>
             </div>
         </div>
@@ -423,6 +433,12 @@
         </div>
     </div>
 </section>
+<footer>
+    <div class="container">
+        <hr/>
+    </div>
+</footer>
+
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"
