added new instagram widget

--- a/index.html
+++ b/index.html
@@ -25,9 +25,6 @@
     <link href="css/fontello-codes.css" rel="stylesheet">
     <link href="css/fontello-embedded.css" rel="stylesheet">
 
-    <!-- i18n -->
-    <script src="js/jquery.i18n/jquery.i18n.js"></script>
-    <script src="js/jquery.i18n/jquery.i18n.messagestore.js"></script>
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -416,15 +413,9 @@
                 </div>
             </div>
             <div class="col-md-4 instagram">
-                <h3 class="instagram_title">
-                    <a target="_blank" href="https://www.instagram.com/plavosidro/?ref=badge"><img
-                            src="assets/img/social/instagram.png" alt="Instagram"/>Instagram</a>
-                </h3>
-                <!--LightWidget WIDGET-->
-                <iframe src="//lightwidget.com/widgets/b632c3a11e565d3fb86659d8eeb542e6.html"
-                        id="lightwidget_b632c3a11e" name="lightwidget_b632c3a11e" scrolling="yes"
-                        allowtransparency="true" class="lightwidget-widget"
-                        style="width: 100%; border: 0; overflow: auto; max-height: 31em"></iframe>
+                <!-- InstaWidget -->
+                <a href="https://instawidget.net/v/user/plavosidro" id="link-e6f3661128539bbf071072bb572e0fc3cb427852623371f71a6d8f95d77d07bb">@plavosidro</a>
+                <script src="https://instawidget.net/js/instawidget.js?u=e6f3661128539bbf071072bb572e0fc3cb427852623371f71a6d8f95d77d07bb&width=360px"></script>
             </div>
             <div class="col-md-4 twitter">
                 <a class="twitter-timeline"
@@ -442,21 +433,24 @@
     </div>
 </footer>
 
-
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"
         integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"></script>
+
 <!-- Include all compiled plugins (below), or include individual files as needed -->
 <script src="js/bootstrap.min.js"></script>
 <script src="js/scrolling-nav.js"></script>
 <script src="js/jquery.easing.min.js"></script>
 <script src="js/lightbox.js"></script>
 
+<!-- i18n -->
+<script src="js/jquery.i18n/jquery.i18n.js"></script>
+<script src="js/jquery.i18n/jquery.i18n.messagestore.js"></script>
 <script src="js/localescript.js"></script>
+
 <script src="js/googlemaps.js"></script>
 <script src="js/facebookpageplugin.js"></script>
-<script src="//lightwidget.com/widgets/lightwidget.js"></script>
 <script src="https://maps.googleapis.com/maps/api/js?sensor=true&callback=initMap" async defer></script>
 <script src="https://platform.twitter.com/widgets.js"></script>
 
