--- a/index.html
+++ b/index.html
@@ -336,8 +336,8 @@
 
                                 <p></p>
                                 +43 664 45 222 38
-                                <br><a href="mailto:info@plavosidro.com">info@plavosidro.com</a>
-                                <br><a href="#">www.plavosidro.com</a>
+                                <br><a href="mailto:info@plavosidro.eu">info@plavosidro.eu</a>
+                                <br><a href="#">www.plavosidro.eu</a>
                             </address>
                         </div>
                     </div>
@@ -355,7 +355,7 @@
                     </span>
                 </h2>
                 <div role="form" class="contact-form">
-                    <form action="MAILTO:info@plavosidro.com" method="post" enctype="text/plain" autocomplete="off">
+                    <form action="MAILTO:info@plavosidro.eu" method="post" enctype="text/plain" autocomplete="off">
                         <input data-i18n="[placeholder]placeholder_name" name="name " placeholder="ime i prezime" class="name" required/>
                         <input data-i18n="[placeholder]placeholder_mail" name="emailaddress " placeholder="e-mail" class="email" type="email"
                                required/>
