--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 Na samom početku i najužem dijelu otoka Vira smještena je kuća "Plavo
                 Sidro". Taj položaj nam pruža izbor dvaju plaža.</p>
             <p data-i18n="welcome_p2">
-                Istočna plaža koja je udaljeno samo stotinjak metara od kuće započinje
+                Istočna plaža koja je udaljena samo stotinjak metara od kuće započinje
                 direktno iz naše ulice, te pruža pravu priliku za osvježenje u vrelim
                 danima koji se sve češče zapisuju na otoku Viru.
                 Zapadna plaža je smještena u uvali Prezida, gdje se uz duž cijele plaže
