disabling social widgets

--- a/index.html
+++ b/index.html
@@ -110,7 +110,6 @@
         Mali Apartman
     </h1>
     <br>
-
     <div class="container">
         <div class="row vertical-align">
             <div class="col-md-6 small-box">
@@ -318,7 +317,7 @@
 </section>
 <section id="contact" class="contact-section">
     <div class="container">
-        <div class="row"> <!-- ohne vertical align-->
+        <div class="row"> <!-- ohne vertical align -->
             <div class="col-md-6 contact-box">
                 <h2 class="heading-line">
                     <span data-i18n="contact">
@@ -366,21 +365,22 @@
                 </div>
                 <div class="social_box">
                     <p>
-                        <span data-i18n="zadar_region">Više o Zadarskoj regiji na </span><a target="_blank" href="http://www.zadar.hr">www.zadar.hr</a>
+                        <span data-i18n="zadar_region">Više o Zadarskoj regiji na </span><a target="_blank" href="https://www.zadar.hr">www.zadar.hr</a>
                     </p>
                     <p>
                         <span data-i18n="find_us">Nadjite nas na </span>
-                        <a target="_blank" href="http://www.booking.com/hotel/hr/apartmani-plavo-sidro-zarici.de.html?label=gen173nr-1BCAsoZUIcYXBhcnRtYW5pLXBsYXZvLXNpZHJvLXphcmljaUgzYgVub3JlZmgOiAEBmAEHwgEDYWJuyAEN2AEB6AEBqAIE;sid=f4d08e8511c26fb98901cbf201c776c6;dcid=1;dist=0&sb_price_type=total&type=total&">www.booking.com</a>
+                        <a target="_blank" href="https://www.booking.com/hotel/hr/apartmani-plavo-sidro-zarici.de.html?label=gen173nr-1BCAsoZUIcYXBhcnRtYW5pLXBsYXZvLXNpZHJvLXphcmljaUgzYgVub3JlZmgOiAEBmAEHwgEDYWJuyAEN2AEB6AEBqAIE;sid=f4d08e8511c26fb98901cbf201c776c6;dcid=1;dist=0&sb_price_type=total&type=total&">www.booking.com</a>
                     </p>
+                    <p>&copy; Apartmani Plavo Sidro, powered by <a target="_blank" href="https://www.vimbsoft.at">Vimbsoft GmbH</a></p>
                     <p>
                         <a target="_blank" href="https://www.facebook.com/applavosidro">
                             <i class="icon-facebook"></i>
                         </a>
-                        <a href="https://twitter.com/intent/follow?screen_name=@plavosidro">
-                            <i class="icon-twitter"></i>
-                        </a>
                         <a target="_blank" href="https://www.instagram.com/plavosidro/?ref=badge">
                             <i class="icon-instagram"></i>
+                        </a>
+                        <a href="https://twitter.com/intent/follow?screen_name=@plavosidro">
+                            <i class="icon-twitter"></i>
                         </a>
                         <a target="_blank" href="https://github.com/PlavoSidro">
                             <i class="icon-github-circled"></i>
@@ -391,6 +391,7 @@
         </div>
     </div>
 </section>
+<!--
 <section id="social" class="social-section">
     <div class="container">
         <div class="row">
@@ -413,7 +414,7 @@
                 </div>
             </div>
             <div class="col-md-4 instagram">
-                <!-- InstaWidget -->
+                &lt;!&ndash; InstaWidget &ndash;&gt;
                 <a href="https://instawidget.net/v/user/plavosidro" id="link-e6f3661128539bbf071072bb572e0fc3cb427852623371f71a6d8f95d77d07bb">@plavosidro</a>
                 <script src="https://instawidget.net/js/instawidget.js?u=e6f3661128539bbf071072bb572e0fc3cb427852623371f71a6d8f95d77d07bb&width=360px"></script>
             </div>
@@ -427,6 +428,7 @@
         </div>
     </div>
 </section>
+-->
 <footer>
     <div class="container">
         <hr/>
