--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 </li>
                 <li class="page-scroll"><a href="#island">Vir</a></li>
                 <li class="page-scroll"><a data-i18n="contact" href="#contact">Kontakt</a></li>
-                <li class="page-scroll"><a data-i18n="gallery" href="#social">Galerija</a></li>
+                <!--<li class="page-scroll"><a data-i18n="gallery" href="#social">Galerija</a></li>-->
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle globus" data-toggle="dropdown" role="button" aria-haspopup="true"
                        aria-expanded="false"><i class="icon-globe"></i> <span class="caret"></span></a>
@@ -391,8 +391,8 @@
         </div>
     </div>
 </section>
-<!--
-<section id="social" class="social-section">
+
+<!--<section id="social" class="social-section">
     <div class="container">
         <div class="row">
             <div class="col-md-12">
@@ -413,11 +413,11 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4 instagram">
-                &lt;!&ndash; InstaWidget &ndash;&gt;
-                <a href="https://instawidget.net/v/user/plavosidro" id="link-e6f3661128539bbf071072bb572e0fc3cb427852623371f71a6d8f95d77d07bb">@plavosidro</a>
-                <script src="https://instawidget.net/js/instawidget.js?u=e6f3661128539bbf071072bb572e0fc3cb427852623371f71a6d8f95d77d07bb&width=360px"></script>
-            </div>
+                      <div class="col-md-4 instagram">
+                          &lt;!&ndash; InstaWidget &ndash;&gt;
+                          <a href="https://instawidget.net/v/user/plavosidro" id="link-e6f3661128539bbf071072bb572e0fc3cb427852623371f71a6d8f95d77d07bb">@plavosidro</a>
+                          <script src="https://instawidget.net/js/instawidget.js?u=e6f3661128539bbf071072bb572e0fc3cb427852623371f71a6d8f95d77d07bb&width=360px"></script>
+                      </div>
             <div class="col-md-4 twitter">
                 <a class="twitter-timeline"
                    href="https://twitter.com/plavosidro"
@@ -427,8 +427,8 @@
             </div>
         </div>
     </div>
-</section>
--->
+</section>-->
+
 <footer>
     <div class="container">
         <hr/>
@@ -453,7 +453,7 @@
 
 <script src="js/googlemaps.js"></script>
 <script src="js/facebookpageplugin.js"></script>
-<script src="https://maps.googleapis.com/maps/api/js?sensor=true&callback=initMap" async defer></script>
+<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAoiuFWMRf3orEyBUqxTkjJ_QNlqMhbpP4&callback=initMap"></script>
 <script src="https://platform.twitter.com/widgets.js"></script>
 
 </body>
