bug fix on i18n

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 </head>
-<body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top" onload="localescript">
+<body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
 <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container">
         <div class="navbar-header page-scroll">
@@ -449,12 +449,12 @@
 <!-- i18n -->
 <script src="js/jquery.i18n/jquery.i18n.js"></script>
 <script src="js/jquery.i18n/jquery.i18n.messagestore.js"></script>
-<script src="js/localescript.js"></script>
+<script type="text/javascript" src="js/localescript.js"></script>
 
 <script src="js/googlemaps.js"></script>
-<script src="js/facebookpageplugin.js"></script>
+<!--<script src="js/facebookpageplugin.js"></script>-->
 <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAoiuFWMRf3orEyBUqxTkjJ_QNlqMhbpP4&callback=initMap"></script>
-<script src="https://platform.twitter.com/widgets.js"></script>
+<!--<script src="https://platform.twitter.com/widgets.js"></script>-->
 
 </body>
 </html>
