--- a/index.html
+++ b/index.html
@@ -25,12 +25,6 @@
     <link href="css/fontello-codes.css" rel="stylesheet">
     <link href="css/fontello-embedded.css" rel="stylesheet">
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
 </head>
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
 <nav class="navbar navbar-default navbar-fixed-top">
@@ -82,8 +76,8 @@
     <div class="container">
         <article class="col-md-8 col-md-offset-2 welcome-box">
             <p data-i18n="welcome_p1">
-                Na samom početku i najužem dijelu otoka Vira smještena je kuća "Plavo
-                Sidro". Taj položaj nam pruža izbor dvaju plaža.</p>
+                Na samom početku i najužem dijelu otoka Vira smještena je kuća Plavo
+                Sidro. Taj položaj nam pruža izbor dvaju plaža.</p>
             <p data-i18n="welcome_p2">
                 Istočna plaža koja je udaljena samo stotinjak metara od kuće započinje
                 direktno iz naše ulice, te pruža pravu priliku za osvježenje u vrelim
@@ -449,11 +443,13 @@
 <!-- i18n -->
 <script src="js/jquery.i18n/jquery.i18n.js"></script>
 <script src="js/jquery.i18n/jquery.i18n.messagestore.js"></script>
-<script type="text/javascript" src="js/localescript.js"></script>
+<script src="js/localescript.js"></script>
 
 <script src="js/googlemaps.js"></script>
-<!--<script src="js/facebookpageplugin.js"></script>-->
+
 <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAoiuFWMRf3orEyBUqxTkjJ_QNlqMhbpP4&callback=initMap"></script>
+
+<!--<script src="js/facebookpageplugin.js"></script>-->
 <!--<script src="https://platform.twitter.com/widgets.js"></script>-->
 
 </body>
